# rustracer

./: Cargo.toml  LICENSE  README.md  low-poly-fox-by-pixelmannen.mtl  settings.toml
src/: main.rs
src/raytracer/: camera.rs  color.rs  hittable.rs  mod.rs  object.rs  primitive.rs  ray.rs  scene.rs  sphere.rs  vec.rs  vec3.rs
src/raytracer/bvh/: binary.rs  bvh.rs  mod.rs
src/raytracer/hittables/: circle.rs  cylinder.rs  hittable.rs  mod.rs  parallelogram.rs  plane.rs  sphere.rs  triangle.rs
src/raytracer/hittables/fractals/: mod.rs  pyramid.rs
src/raytracer/integrator/: integrator.rs  mod.rs  parallel_integrator.rs  simple_integrator.rs  vulkano_integrator.rs
src/raytracer/integrators/: integrator.rs  mod.rs  parallel_integrator.rs  simple_integrator.rs
src/raytracer/lights/: diffuse_spot.rs  directional.rs  directionnal.rs  light.rs  mod.rs  omnidirectional.rs  rectangle.rs  spot.rs
src/raytracer/loaders/: loader.rs  mod.rs  obj.rs
src/raytracer/materials/: diffuse.rs  material.rs  metal.rs  mod.rs  plain.rs  transparent.rs
src/raytracer/movements/: movement.rs
src/raytracer/texture_maps/: mod.rs  png_texture_map.rs  texture_map.rs
src/raytracer/textures/: image.rs  mod.rs  perlin.rs  plain.rs  squares.rs  texture.rs
src/raytracer/utils/: consts.rs  mod.rs  spectrum.rs  vec.rs
src/raytracer/utils/vectors/: mod.rs  vec2.rs  vec3.rs
