[package]
name = "raytracer"
version = "0.1.0"
authors = ["Louis Chauvet <louis.chauvet@free.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.7"
png = "0.16"
rand = "0.7"
image = "0.23"
perlin_noise = "1.0"
clap = "2.33"
obj-rs = "0.6"

[profile.release]
debug = true